renamed sku to name
