# doc/api.yml
@@ -11,28 +11,28 @@ info:
 host: 'localhost:8080'
 basePath: /
 tags:
-  - name: order-controller
-    description: Order Controller
-  - name: product-controller
-    description: Product Controller
+- name: order-controller
+  description: Order Controller
+- name: product-controller
+  description: Product Controller
 paths:
   /order:
     post:
       tags:
-        - order-controller
+      - order-controller
       summary: findOrdersInRange
       operationId: findOrdersInRangeUsingPOST
       consumes:
-        - application/json
+      - application/json
       produces:
-        - '*/*'
+      - '*/*'
       parameters:
-        - in: body
-          name: criteria
-          description: criteria
-          required: true
-          schema:
-            $ref: '#/definitions/FindOrderCriteriaDTO'
+      - in: body
+        name: criteria
+        description: criteria
+        required: true
+        schema:
+          $ref: '#/definitions/FindOrderCriteriaDTO'
       responses:
         '200':
           description: OK
@@ -51,20 +51,20 @@ paths:
       deprecated: false
     put:
       tags:
-        - order-controller
+      - order-controller
       summary: createOrder
       operationId: createOrderUsingPUT
       consumes:
-        - application/json
+      - application/json
       produces:
-        - '*/*'
+      - '*/*'
       parameters:
-        - in: body
-          name: orderDTO
-          description: orderDTO
-          required: true
-          schema:
-            $ref: '#/definitions/OrderDTO'
+      - in: body
+        name: orderDTO
+        description: orderDTO
+        required: true
+        schema:
+          $ref: '#/definitions/OrderDTO'
       responses:
         '200':
           description: OK
@@ -83,11 +83,11 @@ paths:
   /products:
     get:
       tags:
-        - product-controller
+      - product-controller
       summary: getProducts
       operationId: getProductsUsingGET
       produces:
-        - '*/*'
+      - '*/*'
       responses:
         '200':
           description: OK
@@ -104,20 +104,20 @@ paths:
       deprecated: false
     put:
       tags:
-        - product-controller
+      - product-controller
       summary: createProduct
       operationId: createProductUsingPUT
       consumes:
-        - application/json
+      - application/json
       produces:
-        - '*/*'
+      - '*/*'
       parameters:
-        - in: body
-          name: newProduct
-          description: newProduct
-          required: true
-          schema:
-            $ref: '#/definitions/Product'
+      - in: body
+        name: newProduct
+        description: newProduct
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
       responses:
         '200':
           description: OK
@@ -135,18 +135,18 @@ paths:
   '/products/{id}':
     get:
       tags:
-        - product-controller
+      - product-controller
       summary: getProduct
       operationId: getProductUsingGET
       produces:
-        - '*/*'
+      - '*/*'
       parameters:
-        - name: id
-          in: path
-          description: id
-          required: true
-          type: integer
-          format: int64
+      - name: id
+        in: path
+        description: id
+        required: true
+        type: integer
+        format: int64
       responses:
         '200':
           description: OK
@@ -161,26 +161,26 @@ paths:
       deprecated: false
     post:
       tags:
-        - product-controller
+      - product-controller
       summary: updateProduct
       operationId: updateProductUsingPOST
       consumes:
-        - application/json
+      - application/json
       produces:
-        - '*/*'
+      - '*/*'
       parameters:
-        - name: id
-          in: path
-          description: id
-          required: true
-          type: integer
-          format: int64
-        - in: body
-          name: product
-          description: product
-          required: true
-          schema:
-            $ref: '#/definitions/Product'
+      - name: id
+        in: path
+        description: id
+        required: true
+        type: integer
+        format: int64
+      - in: body
+        name: product
+        description: product
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
       responses:
         '200':
           description: OK
@@ -197,18 +197,18 @@ paths:
       deprecated: false
     delete:
       tags:
-        - product-controller
+      - product-controller
       summary: deleteProduct
       operationId: deleteProductUsingDELETE
       produces:
-        - '*/*'
+      - '*/*'
       parameters:
-        - name: id
-          in: path
-          description: id
-          required: true
-          type: integer
-          format: int64
+      - name: id
+        in: path
+        description: id
+        required: true
+        type: integer
+        format: int64
       responses:
         '200':
           description: OK
@@ -230,6 +230,94 @@ definitions:
         type: string
         format: date-time
     title: FindOrderCriteriaDTO
+  ModelAndView:
+    type: object
+    properties:
+      empty:
+        type: boolean
+      model:
+        type: object
+      modelMap:
+        type: object
+        additionalProperties:
+          type: object
+      reference:
+        type: boolean
+      status:
+        type: string
+        enum:
+        - 100 CONTINUE
+        - 101 SWITCHING_PROTOCOLS
+        - 102 PROCESSING
+        - 103 CHECKPOINT
+        - 200 OK
+        - 201 CREATED
+        - 202 ACCEPTED
+        - 203 NON_AUTHORITATIVE_INFORMATION
+        - 204 NO_CONTENT
+        - 205 RESET_CONTENT
+        - 206 PARTIAL_CONTENT
+        - 207 MULTI_STATUS
+        - 208 ALREADY_REPORTED
+        - 226 IM_USED
+        - 300 MULTIPLE_CHOICES
+        - 301 MOVED_PERMANENTLY
+        - 302 FOUND
+        - 302 MOVED_TEMPORARILY
+        - 303 SEE_OTHER
+        - 304 NOT_MODIFIED
+        - 305 USE_PROXY
+        - 307 TEMPORARY_REDIRECT
+        - 308 PERMANENT_REDIRECT
+        - 400 BAD_REQUEST
+        - 401 UNAUTHORIZED
+        - 402 PAYMENT_REQUIRED
+        - 403 FORBIDDEN
+        - 404 NOT_FOUND
+        - 405 METHOD_NOT_ALLOWED
+        - 406 NOT_ACCEPTABLE
+        - 407 PROXY_AUTHENTICATION_REQUIRED
+        - 408 REQUEST_TIMEOUT
+        - 409 CONFLICT
+        - 410 GONE
+        - 411 LENGTH_REQUIRED
+        - 412 PRECONDITION_FAILED
+        - 413 PAYLOAD_TOO_LARGE
+        - 413 REQUEST_ENTITY_TOO_LARGE
+        - 414 URI_TOO_LONG
+        - 414 REQUEST_URI_TOO_LONG
+        - 415 UNSUPPORTED_MEDIA_TYPE
+        - 416 REQUESTED_RANGE_NOT_SATISFIABLE
+        - 417 EXPECTATION_FAILED
+        - 418 I_AM_A_TEAPOT
+        - 419 INSUFFICIENT_SPACE_ON_RESOURCE
+        - 420 METHOD_FAILURE
+        - 421 DESTINATION_LOCKED
+        - 422 UNPROCESSABLE_ENTITY
+        - 423 LOCKED
+        - 424 FAILED_DEPENDENCY
+        - 426 UPGRADE_REQUIRED
+        - 428 PRECONDITION_REQUIRED
+        - 429 TOO_MANY_REQUESTS
+        - 431 REQUEST_HEADER_FIELDS_TOO_LARGE
+        - 451 UNAVAILABLE_FOR_LEGAL_REASONS
+        - 500 INTERNAL_SERVER_ERROR
+        - 501 NOT_IMPLEMENTED
+        - 502 BAD_GATEWAY
+        - 503 SERVICE_UNAVAILABLE
+        - 504 GATEWAY_TIMEOUT
+        - 505 HTTP_VERSION_NOT_SUPPORTED
+        - 506 VARIANT_ALSO_NEGOTIATES
+        - 507 INSUFFICIENT_STORAGE
+        - 508 LOOP_DETECTED
+        - 509 BANDWIDTH_LIMIT_EXCEEDED
+        - 510 NOT_EXTENDED
+        - 511 NETWORK_AUTHENTICATION_REQUIRED
+      view:
+        $ref: '#/definitions/View'
+      viewName:
+        type: string
+    title: ModelAndView
   OrderDTO:
     type: object
     properties:
@@ -252,11 +340,11 @@ definitions:
   OrderLineDTO:
     type: object
     properties:
+      productName:
+        type: string
       qty:
         type: number
         format: double
-      sku:
-        type: string
     title: OrderLineDTO
   Product:
     type: object
@@ -266,11 +354,17 @@ definitions:
       id:
         type: integer
         format: int64
+      name:
+        type: string
       price:
         type: number
         format: double
-      sku:
-        type: string
       um:
         type: string
     title: Product
+  View:
+    type: object
+    properties:
+      contentType:
+        type: string
+    title: View
